made test change in home.html

--- a/client/html/home.html
+++ b/client/html/home.html
@@ -1,5 +1,5 @@
 <template name="jokes">
-
+<!--testing change 1 -->
   {{> jokeForm}}
   {{#each jokes}}<!--calls from jokes.js helper function which finds the Jokes form from database which contains joke info -->
   <!-- Joke -->
