added top nav bar functionality

--- a/client/html/layout.html
+++ b/client/html/layout.html
@@ -14,7 +14,8 @@
 
 <body>
   {{> bertAlert}}
-  {{> sidebar}}
+  <!--{{> sidebar}}-->
+  {{> topnavbar}}
 <!--this is where main layout is rendered -->
 </body>
 
