added drop down threads option

--- a/client/html/layout.html
+++ b/client/html/layout.html
@@ -16,6 +16,7 @@
   {{> bertAlert}}
   <!--{{> sidebar}}-->
   {{> topnavbar}}
+  <!--{{> dropdownbar}}-->
 <!--this is where main layout is rendered -->
 </body>
 
