added database functionality for threadForm

--- a/client/html/layout.html
+++ b/client/html/layout.html
@@ -16,8 +16,8 @@
   {{> bertAlert}}
   <!--{{> sidebar}}-->
   {{> topnavbar}}
-  <!--{{> dropdownbar}}-->
 <!--this is where main layout is rendered -->
+  <!--{{> threadForm}}-->
 </body>
 
 <template name="main_layout">
