--- a/client/html/profile.html
+++ b/client/html/profile.html
@@ -37,7 +37,7 @@
     <div class="row"><!-- bootstrap row -->
 
       <div class=".col-sm-6 .col-md-5 .col-lg-6" id="info"><!-- bootstrap col decides col size for diff window sizes -->
-        <h1 class="joke-title">{{jokeName}}</h1><!-- header type -->
+        <h1 class="joke-title">{{postTitle}}</h1><!-- header type -->
         <p class="meta">Author: {{author}}</p>
         <p class="meta">Posted On: {{date}}</p>
       </div>
@@ -52,7 +52,7 @@
         <h3 class="count green block">{{pukeScore}}</h3>
       </div>
     </div>
-    <p class="regular joke-desc">"{{jokePost}}"</p>
+    <p class="regular joke-desc">"{{postDesc}}"</p>
     <button class="btn btn-sml btn-danger" id="delete-joke">Delete Joke</button>
   </div>
   <!-- EndJoke -->
