--- a/client/html/topnavbar.html
+++ b/client/html/topnavbar.html
@@ -24,7 +24,7 @@
 
           {{else}}
           {{/if}}
-          <a class="link-blue" href="/jokes" id="jokes-link"><i class="fa fa-comments-o"></i>Jokes</a>
+          <a class="link-blue" href="/jokes" id="jokes-link"><i class="fa fa-comments-o"></i>Subscribed Posts</a>
           <a class="link-yellow" href="/rankings" id="rankings-link"><i class="fa fa-trophy"></i>Rankings</a>
           <a class="link-green" href="/search" id="search-link"><i class="fa fa-search"></i>Search</a>
           {{#if currentUser}}
