--- a/client/html/home.html
+++ b/client/html/home.html
@@ -1,13 +1,15 @@
 <template name="jokes">
 <!--testing change 1 -->
+<!--calls from jokes.js helper function which finds the Jokes form from database which contains joke info -->
+<!--
   {{> jokeForm}}
-  {{#each jokes}}<!--calls from jokes.js helper function which finds the Jokes form from database which contains joke info -->
-  <!-- Joke -->
-  <div class="joke">
-    <div class="row"><!-- bootstrap row -->
+  {{#each jokes}}
 
-      <div class=".col-sm-6 .col-md-5 .col-lg-6" id="info"><!-- bootstrap col decides col size for diff window sizes -->
-        <h1 class="joke-title">{{jokeName}}</h1><!-- header type -->
+  <div class="joke">
+    <div class="row">
+
+      <div class=".col-sm-6 .col-md-5 .col-lg-6" id="info">
+        <h1 class="joke-title">{{jokeName}}</h1>
         <p class="meta">Author: {{author}}</p>
         <p class="meta">Posted On: {{date}}</p>
       </div>
@@ -24,8 +26,37 @@
     </div>
     <p class="regular joke-desc">{{jokePost}}</p>
   </div>
-  <!-- EndJoke -->
+
   {{else}}
   <h1>no jokes to display</h1>
   {{/each}}
+  -->
+{{#each posts}}
+<div class="joke">
+  <div class="row">
+
+    <div class=".col-sm-6 .col-md-5 .col-lg-6" id="info">
+      <h1 class="joke-title">{{postTitle}}</h1>
+      <p class="meta">Author: {{author}}</p>
+      <p class="meta">Posted On: {{date}}</p>
+    </div>
+    <div class=".col-sm-6 .col-md-5 .col-lg-offset-2 .col-lg-6 .col-lg-offset-0" id="vote">
+      <img src="laugh.png" class="smiley" id="laugh">
+      <img src="frown.png" class="smiley" id="frown">
+      <img src="puke.png" class="smiley" id="puke">
+    </div>
+    <div class="row" id="score">
+      <h3 class="count red block">{{laughScore}}</h3>
+      <h3 class="count yellow block">{{frownScore}}</h3>
+      <h3 class="count green block">{{pukeScore}}</h3>
+    </div>
+  </div>
+  <p class="regular joke-desc">{{postDesc}}</p>
+  <p class="regular joke-desc">{{qnNumber}}</p>
+  <p class="regular joke-desc">{{chosenThread}}</p>
+</div>
+{{else}}
+<h1>no jokes to display</h1>
+{{/each}}
+
 </template>
