--- a/client/html/topnavbar.html
+++ b/client/html/topnavbar.html
@@ -27,6 +27,7 @@
           <a class="link-blue" href="/jokes" id="jokes-link"><i class="fa fa-comments-o"></i>Subscribed Posts</a>
           <a class="link-yellow" href="/rankings" id="rankings-link"><i class="fa fa-trophy"></i>Rankings</a>
           <a class="link-green" href="/search" id="search-link"><i class="fa fa-search"></i>Search</a>
+          <a class="link-green" href="/threadsearch" id="search-link"><i class="fa fa-search"></i>Search Threads</a>
           {{#if currentUser}}
           <a class="link-purple logout" href="#" id="logout-link"><i class="fa fa-sign-out"></i>Logout</a>
           {{else}}
