--- a/client/html/threadsearch.html
+++ b/client/html/threadsearch.html
@@ -21,7 +21,7 @@
 
 		<ol class="leaderboard">
 			{{#EasySearch.Each index=index }}
-				{{> User}}
+				{{> threadUser}}
 			{{/EasySearch.Each}}
 		</ol>
 
@@ -61,6 +61,10 @@
 				<span class="author">Author: {{author}}</span>
 			</div>
 				<br>
+        <div>
+  				<a class="link-green" href="/rankings" >Go to Thread</a>
+  			</div>
+  				<br>
 		</div>
 		{{/if}}
 	</li>
