threads can now save subscribers

--- a/client/html/home.html
+++ b/client/html/home.html
@@ -56,7 +56,7 @@
   <p class="regular joke-desc">{{chosenThread}}</p>
 </div>
 {{else}}
-<h1>no jokes to display</h1>
+<h1>no posts to display</h1>
 {{/each}}
 
 </template>
