--- a/client/html/threadsearch.html
+++ b/client/html/threadsearch.html
@@ -63,8 +63,12 @@
 				<br>
         <div>
   				<a class="link-green" href="/rankings" >Go to Thread</a>
+
   			</div>
   				<br>
+				<div>
+					<span id="subThread">Subscribe</span>
+				</div>
 		</div>
 		{{/if}}
 	</li>
