can display post properties correctly but creator of thread has to manually sub to his own thread

--- a/client/html/home.html
+++ b/client/html/home.html
@@ -53,7 +53,7 @@
   </div>
   <p class="regular joke-desc">{{postDesc}}</p>
   <p class="regular joke-desc">{{qnNumber}}</p>
-  <p class="regular joke-desc">{{chosenThread}}</p>
+  <p class="regular joke-desc">{{chosenThreadName}}</p>
 </div>
 {{else}}
 <h1>no posts to display</h1>
