fking hell still doesnt work

--- a/client/html/threadsearch.html
+++ b/client/html/threadsearch.html
@@ -62,7 +62,7 @@
 			</div>
 				<br>
         <div>
-  				<a class="link-green" href="/rankings" >Go to Thread</a>
+  				<a class="link-green" href="threadpage/{{__originalId}}" >Go to Thread</a>
 
   			</div>
   				<br>
