dynamic html thread pages

--- a/client/html/threadpage.html
+++ b/client/html/threadpage.html
@@ -1,7 +1,10 @@
 <template name="threadpage">
   <span id="testing">testing text</span>
 
-  {{#each all_post}}
+  {{#each posts}}
     <p class="black">{{postDesc}}</p>
+  {{else}}
+
+  <p>no posts</p>
   {{/each}}
 </template>
