updated css files for sub threads dropdown

--- a/client/html/home.html
+++ b/client/html/home.html
@@ -31,7 +31,7 @@
   <h1>no jokes to display</h1>
   {{/each}}
   -->
-  <div id="myBtnContainer">
+  <div class="sub-title">
     <div class="dropdown">
       <button class="dropbtn" onclick="click_dropthreads()">Subscribed Threads
         <i class="fa fa-caret-down"></i>
