--- a/client/html/home.html
+++ b/client/html/home.html
@@ -53,14 +53,14 @@
       <p class="meta">Posted On: {{date}}</p>
     </div>
     <div class=".col-sm-6 .col-md-5 .col-lg-offset-2 .col-lg-6 .col-lg-offset-0" id="vote">
-      <img src="laugh.png" class="smiley" id="laugh">
-      <img src="frown.png" class="smiley" id="frown">
-      <img src="puke.png" class="smiley" id="puke">
+      <img src="laugh.png" class="smiley" id="upvote">
+      <img src="frown.png" class="smiley" id="downvote">
+      <!--<img src="puke.png" class="smiley" id="downvote">-->
     </div>
     <div class="row" id="score">
-      <h3 class="count red block">{{laughScore}}</h3>
-      <h3 class="count yellow block">{{frownScore}}</h3>
-      <h3 class="count green block">{{pukeScore}}</h3>
+      <h3 class="count red block">{{upvoted.length}}</h3>
+      <h3 class="count yellow block">{{downvoted.length}}</h3>
+      <!--<h3 class="count green block">{{pukeScore}}</h3>-->
     </div>
   </div>
   <p class="regular joke-desc">{{postDesc}}</p>
