--- a/client/html/threadpage.html
+++ b/client/html/threadpage.html
@@ -1,8 +1,27 @@
 <template name="threadpage">
-  <span id="testing">testing text</span>
+  <div class="heading">
+
+    {{#with single_thread}}
+    <h2 class="count green block">{{threadName}}</h2>
+    <span class="count black block">{{threadDesc}}</span>
+    {{/with}}
+  </div>
+
+  <br>
 
   {{#each posts}}
-    <p class="black">{{postDesc}}</p>
+
+    <div class="postinfo">
+      <h3 class="black">{{postTitle}}</h3>
+      <br>
+      <p>{{postDesc}}</p>
+      <br>
+      <a class="link-green" href="/postpage/{{_id}}">Go To Post</a>
+      <h3> </h3>
+      <br>
+    </div>
+
+
   {{else}}
 
   <p>no posts</p>
