# added author Name

--- a/client/html/threadpage.html
+++ b/client/html/threadpage.html
@@ -4,6 +4,7 @@
     {{#with single_thread}}
     <h2 class="count green block">{{threadName}}</h2>
     <span class="count black block">{{threadDesc}}</span>
+    <p class="author">Created By: {{author}}</p>
     {{/with}}
   </div>
 
