# included routing to a postpage for each post but incomplete

--- a/client/html/threadpage.html
+++ b/client/html/threadpage.html
@@ -5,6 +5,7 @@
     <h2 class="count green block">{{threadName}}</h2>
     <span class="count black block">{{threadDesc}}</span>
     <p class="author">Created By: {{author}}</p>
+    <p id="date">Created On: {{date}}</p>
     {{/with}}
   </div>
 
