--- a/client/html/threadpage.html
+++ b/client/html/threadpage.html
@@ -18,7 +18,7 @@
       <br>
       <p>{{postDesc}}</p>
       <br>
-      <a class="link-green" href="/postpage/{{_id}}">Go To Post</a>
+      <a class="link-green" href="/postpage/{{_id}}" id="redirect">Go To Post</a>
       <h3> </h3>
       <br>
     </div>
