To be used for merging with master

--- a/client/html/postpage.html
+++ b/client/html/postpage.html
@@ -8,6 +8,8 @@
       <p>{{postDesc}}</p>
       <br>
       <p>Number of Questions: {{qnNumber}}</p>
+      <br>
+      <p>Number of votes: </p>
     </div>
 
   {{/with}}
