to be used to merge with master

--- a/client/html/postpage.html
+++ b/client/html/postpage.html
@@ -9,7 +9,7 @@
       <br>
       <p>Number of Questions: {{qnNumber}}</p>
       <br>
-      <p>Number of votes: </p>
+      <p>Number of votes: no of upvoted - no of downvoted </p>
     </div>
 
   {{/with}}
