added with merge

--- a/client/html/home.html
+++ b/client/html/home.html
@@ -51,6 +51,7 @@
       <h1 class="joke-title">{{postTitle}}</h1>
       <p class="meta">Author: {{author}}</p>
       <p class="meta">Posted On: {{date}}</p>
+      <a class="link-blue" href="/postpage/{{_id}}" id="redirect">Go to Post</a>
     </div>
     <div class=".col-sm-6 .col-md-5 .col-lg-offset-2 .col-lg-6 .col-lg-offset-0" id="vote">
       <img src="laugh.png" class="smiley" id="upvote">
