added question page still need to add question page comment form

--- a/client/html/topnavbar.html
+++ b/client/html/topnavbar.html
@@ -7,7 +7,7 @@
           <a class="company-logo active" href="#">NUS SHARE</a>
 
           <div class="dropdown">
-            <button class="dropbtn" onclick="click_drop()">Threads
+            <button class="dropbtn" onclick="click_drop()">Create
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content" id="myDropdown">
@@ -23,8 +23,8 @@
           {{else}}
           {{/if}}
           <a class="link-blue" href="/jokes" id="jokes-link"><i class="fa fa-comments-o"></i>Subscribed Posts</a>
-          <a class="link-yellow" href="/rankings" id="rankings-link"><i class="fa fa-trophy"></i>Rankings</a>
-          <a class="link-green" href="/search" id="search-link"><i class="fa fa-search"></i>Search</a>
+          <!--<a class="link-yellow" href="/rankings" id="rankings-link"><i class="fa fa-trophy"></i>Rankings</a>-->
+          <!--<a class="link-green" href="/search" id="search-link"><i class="fa fa-search"></i>Search</a>-->
           <a class="link-green" href="/threadsearch" id="search-link"><i class="fa fa-search"></i>Search Threads</a>
           {{#if currentUser}}
           <a class="link-purple logout" href="#" id="logout-link"><i class="fa fa-sign-out"></i>Logout</a>
