--- a/client/html/postpage.html
+++ b/client/html/postpage.html
@@ -2,7 +2,7 @@
 
   {{#with post}}
 
-    <div class="heading">
+    <div class="heading" id="postsrc">
       <h3 class="count blue block" id="testing">{{postTitle}}</h3>
       <br>
       <p>{{postDesc}}</p>
@@ -14,11 +14,24 @@
 
   {{/with}}
 
-{{> commentForm}}
+  <h3 class="count red block" id="testcreate">test create element</h3>
 
+{{> commentForm}}
+<h3 class="count blue block" id="testing">Comments</h3>
 {{#each comments}}
 <div class="heading">
-  <h3 class="count blue block" id="testing">{{commentDesc}}</h3>
+
+  <p>{{commentDesc}}</p>
+  <div class=".col-sm-6 .col-md-5 .col-lg-offset-2 .col-lg-6 .col-lg-offset-0" id="vote">
+    <img src="laugh.png" class="smiley" id="upvote">
+    <img src="frown.png" class="smiley" id="downvote">
+    <!--<img src="puke.png" class="smiley" id="downvote">-->
+  </div>
+  <div class="row" id="score">
+    <h3 class="count red block">10</h3>
+    <h3 class="count yellow block">10</h3>
+    <!--<h3 class="count green block">{{pukeScore}}</h3>-->
+  </div>
 </div>
 {{else}}
 <h1>no posts to display</h1>
