comments for questions enabled now need to pin OP comments

--- a/client/html/questionpage.html
+++ b/client/html/questionpage.html
@@ -4,4 +4,14 @@
   <p>questions are here</p>
 </div>
 
+
+{{> qnpagecomment}}
+
+{{#each questions}}
+<div class="heading">
+  <p>{{qnDesc}}</p>
+</div>
+{{else}}
+<p>no comments</p>
+{{/each}}
 </template>
