css changed for home

--- a/client/html/postpage.html
+++ b/client/html/postpage.html
@@ -14,7 +14,7 @@
 
   {{/with}}
 
-  <h3 class="count red block" id="testcreate">test create element</h3>
+  <!--<h3 class="count red block" id="testcreate">test create element</h3>-->
 
 {{> commentForm}}
 <h3 class="count blue block" id="testing">Comments</h3>
@@ -34,7 +34,7 @@
   </div>
 </div>
 {{else}}
-<h1>no posts to display</h1>
+<h1>no comments to display</h1>
 {{/each}}
 
 </template>
