css changed pt 2

--- a/client/html/home.html
+++ b/client/html/home.html
@@ -70,7 +70,7 @@
       <h3 class="count red block">{{upvoted.length}}</h3>
       <h3 class="count yellow block">{{downvoted.length}}</h3>
     </div>-->
-    <p class="regular joke-desc">{{chosenThreadName}}</p>
+    <p class="regular joke-desc">{{chosenThreadName}} <br> Author: {{author}}</p>
   </div>
 
   <!--<p class="regular joke-desc">{{postDesc}}</p>
