--- a/client/html/postpage.html
+++ b/client/html/postpage.html
@@ -9,7 +9,7 @@
       <br>
       <p>Number of Questions: {{qnNumber}}</p>
       <br>
-      <p>Number of votes: no of upvoted - no of downvoted </p>
+      <p>Number of votes: {{score}} </p>
     </div>
 
   {{/with}}
@@ -22,6 +22,7 @@
 <div class="heading">
 
   <p>{{commentDesc}}</p>
+  <h6>{{op}}</h6>
   <div class=".col-sm-6 .col-md-5 .col-lg-offset-2 .col-lg-6 .col-lg-offset-0" id="vote">
     <img src="laugh.png" class="smiley" id="upvote">
     <img src="frown.png" class="smiley" id="downvote">
