--- a/client/html/home.html
+++ b/client/html/home.html
@@ -32,11 +32,11 @@
   {{/each}}
   -->
   <div class="sub-title">
-    <div class="dropdown">
-      <button class="dropbtn" onclick="click_dropthreads()">Subscribed Threads
+    <div class="dropdown1">
+      <button class="dropbtn1" onclick="click_dropthreads()">Subscribed Threads
         <i class="fa fa-caret-down"></i>
       </button>
-      <div class="dropdown-content" id="myDropdownFilter">
+      <div class="dropdown-content1" id="myDropdownFilter">
           {{#each subscriptions}}
             <a class="link-green" href="threadpage/{{_id}}">{{threadName}}</a>
           {{/each}}
@@ -44,12 +44,12 @@
     </div>
   </div>
 
-  <div class="joke">
+  <div class="joke-head">
     <div class="threadbar">
-      <p class="regular joke-title">Votes</p>
+      <p class="regular joke-head-font">Votes</p>
     </div>
     <div class="threadbar">
-      <p class="regular joke-title">Topic</p>
+      <p class="regular joke-head-font">Topic</p>
     </div>
   </div>
 
@@ -90,6 +90,16 @@
 <h1>no posts to display</h1>
 {{/each}}
 
+<div class="joke-tail">
+  <div class="threadbar">
+    <p class="regular joke-title"></p>
+  </div>
+  <br>
+  <div class="threadbar">
+    <p class="regular joke-title"></p>
+  </div>
+</div>
+
 
 <script>
 function click_dropthreads() {
@@ -98,8 +108,8 @@ document.getElementById("myDropdownFilter").classList.toggle("show");
 
 // Close the dropdown if the user clicks outside of it
 window.onclick = function(event) {
-if (!event.target.matches('.dropbtn')) {
-  var dropdowns = document.getElementsByClassName("dropdown-content");
+if (!event.target.matches('.dropbtn1')) {
+  var dropdowns = document.getElementsByClassName("dropdown-content1");
   var i;
   for (i = 0; i < dropdowns.length; i++) {
     var openDropdown = dropdowns[i];
