to test if the new file works

--- a/client/html/topnavbar.html
+++ b/client/html/topnavbar.html
@@ -4,7 +4,7 @@
 
   <div class="navbar" id="myTopnav">
 
-          <a class="company-logo" href="/jokes">NUS SHARE</a>
+          <a class="company-logo" href="/jokes">NUS SHAREv2</a>
 
 
 
