--- a/client/html/questionpage.html
+++ b/client/html/questionpage.html
@@ -57,11 +57,11 @@
   <div class="votecol" id="vote">
     <div>
 
-      <img src="/upvote_icon.png" class="smiley" id="upvote">
+      <img src="/upvote_icon.png" class="smiley" id="upvoteQn">
       <h3 class="count red block">{{upvoted.length}}</h3>
     </div>
     <div>
-      <img src="/downvote_icon.png" class="smiley" id="downvote">
+      <img src="/downvote_icon.png" class="smiley" id="downvoteQn">
       <h3 class="count yellow block">{{downvoted.length}}</h3>
     </div>
   </div>
