--- a/client/html/threadpage.html
+++ b/client/html/threadpage.html
@@ -47,11 +47,11 @@
   <div class="joke">
     <div class="votecol" id="vote">
       <div>
-        <img src="/upvote_icon.png" class="smiley" id="upvote">
+        <img src="/upvote_icon.png" class="smiley" id="upvoteThread">
         <h3 class="count red block">{{upvoted.length}}</h3>
       </div>
       <div>
-        <img src="/downvote_icon.png" class="smiley" id="downvote">
+        <img src="/downvote_icon.png" class="smiley" id="downvoteThread">
         <h3 class="count yellow block">{{downvoted.length}}</h3>
       </div>
     </div>
