changed search thread place holder

--- a/client/html/threadsearch.html
+++ b/client/html/threadsearch.html
@@ -8,7 +8,7 @@
 		</div>
 
 		{{#EasySearch.IfInputEmpty index=index }}
-			<div class="padded examples black">For example "Yo Mamma"</div>
+			<div class="padded examples black">Search by Thread</div>
 		{{else}}
 			{{#if resultsCount}}
 				<div class="padded count-results black">{{resultsCount}} results found.</div>
