--- a/client/html/topnavbar.html
+++ b/client/html/topnavbar.html
@@ -3,8 +3,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <div class="navbar" id="myTopnav">
-
-          <a class="company-logo" href="/jokes">NUS SHAREv2</a>
+          <img src="book.png" class="icon-book" id="book">
+          <a class="company-logo" href="/jokes">NUS SHARE</a>
 
 
 
