added the functionality to attach files to posts

--- a/client/html/postForm.html
+++ b/client/html/postForm.html
@@ -17,6 +17,10 @@
         <!--<button type="submit" value="Upload a File" id="profile-btn" class="btn btn-sml btn-primary">Upload File</button>-->
       </form>
       <br>
+      <h4 class="jokeForm-heading">Upload a PDF/Picture from Google Docs</h4>
+
+      <input type="text" name="PDFlink" id="PDFlink" class="form-control" placeholder="Paste the sharing link of PDF/Picture from Google Docs">
+      <br>
       <h4 class="jokeForm-heading">Description</h4>
       <textarea id="postDesc" name="postDesc" placeholder="This is how students understand the purpose of the post" style="height:200px"></textarea>
 
