--- a/client/html/postpage.html
+++ b/client/html/postpage.html
@@ -36,6 +36,10 @@
       <br>
     </div>
 
+    <div class="">
+      <iframe src="{{PDFlink}}" width="640" height="480"></iframe>
+    </div>
+
   {{/with}}
 
 <div class="commentheading">
