completed profile scoring system

--- a/client/html/profile.html
+++ b/client/html/profile.html
@@ -18,6 +18,7 @@
 
       <h1 class="username">{{username}}</h1>
       <h3>{{email}}</h3>
+      <h3>Points: {{points}}</h3>
         <!--<div class="" id="">
           <img src="laugh.png" class="profile-smiley" id="laugh">
           <img src="frown.png" class="profile-smiley" id="frown">
