--- a/client/html/postForm.html
+++ b/client/html/postForm.html
@@ -10,16 +10,10 @@
       <label for="postTitle" class="sr-only">Title</label>
       <input type="text" name="postTitle" id="postTitle" class="form-control" placeholder="Post Title" maxlength="40">
       <br>
-      <form class="upload-file" enctype="multipart/form-data" >
-        <label for="qnDoc">Choose File to Upload</label>
-        <span id="pdfname"></span>
-        <input type="file" name="qnDoc" id="qnDoc" class="black profileImage">
-        <!--<button type="submit" value="Upload a File" id="profile-btn" class="btn btn-sml btn-primary">Upload File</button>-->
-      </form>
-      <br>
-      <h4 class="jokeForm-heading">Upload a PDF/Picture from Google Docs</h4>
 
-      <input type="text" name="PDFlink" id="PDFlink" class="form-control" placeholder="Paste the sharing link of PDF/Picture from Google Docs">
+      <br>
+      <h4 class="jokeForm-heading">Attach a File from Google Docs</h4>
+      <input type="text" name="PDFlink" id="PDFlink" class="form-control" placeholder="Paste the sharing link of a File from Google Docs   e.g. PDF, Image, Word">
       <br>
       <h4 class="jokeForm-heading">Description</h4>
       <textarea id="postDesc" name="postDesc" placeholder="This is how students understand the purpose of the post" style="height:200px"></textarea>
