added links to profile pages in threadpage, home and threadssearch

--- a/client/html/threadsearch.html
+++ b/client/html/threadsearch.html
@@ -58,7 +58,7 @@
 			</div>
 				<br>
 			<div>
-				<span class="author">Author: {{author}}</span>
+				<a class="link-green" href="/profiles/{{userId}}" id="profile_direct">Author: {{author}}</a>
 			</div>
 				<br>
         <div>
