--- a/client/html/home.html
+++ b/client/html/home.html
@@ -79,7 +79,8 @@
       <h3 class="count red block">{{upvoted.length}}</h3>
       <h3 class="count yellow block">{{downvoted.length}}</h3>
     </div>-->
-    <p class="regular joke-desc">{{chosenThreadName}} <br> Author: {{author}}</p>
+    <p class="regular joke-desc">{{chosenThreadName}} <br></p>
+    <a class="link-blue" href="/profiles/{{userId}}" id="profile_direct">Author: {{author}}</a>
   </div>
 
   <!--<p class="regular joke-desc">{{postDesc}}</p>
